# kaz-nu-math-stats

./: .gitignore  README.md  main.py  pyproject.toml
00-images/: ad_4nxcyfncgqgeyknfqxzodeuudd-wsazuyvqz9djpe96aurzs9pzvdreznj8cooxafdnj4shkc7_kg3nkakmoj4j-legg4lmttsmfvedm3lyodyakjlh-hwwpq82p_3hc2wsftzbeetq.avif
01-ipynb/: 00-introduction.ipynb  01-discrete-variables.ipynb  02-uniform-distribution.ipynb  03-exponential-distribution.ipynb  03-gamma-distribution.ipynb  04-exponential-distribution.ipynb  05-bayes-rule.ipynb  05-conditional-distributions.ipynb  06-law-of-large-numbers.ipynb  07-normal-distribution.ipynb  08-central-limit-theorem.ipynb  08-normal-distribution.ipynb  09-central-limit-theorem.ipynb  09-sample-estimators.ipynb  10-estimators.ipynb  10-sample-estimators.ipynb  12-chi-squared-distribution.ipynb  12-likelihood.ipynb  13-chi-squared-distribution.ipynb  13-student-t-distribution.ipynb
02-exercises/: 01-confidence-intervals.ipynb
ipynb/: 01-intro.ipynb
